# dagster-project

./: environment.yml  environment_A.yml
recommender_system/: pyproject.toml  pyproject.toml.bk  requirements.txt
recommender_system/.telemetry/: id.yaml
recommender_system/dagster_home/.telemetry/: id.yaml
recommender_system/dagster_home/history/: runs.db
recommender_system/dagster_home/history/runs/: 800a2758-3538-476d-97ef-342e0ff48cf4.db  84488b43-1a81-4af9-bb9a-0f70ce88b3e7.db  b4c8803d-fc5d-4170-a1bb-57e6ed6edbda.db  f1af8ced-d5a0-422b-9d84-b10fdfcaa3b5.db  index.db
recommender_system/dagster_home/schedules/: schedules.db
recommender_system/dagster_home/storage/: X_test  X_train  model_metrics  model_stored  model_trained  movie2Idx  preprocessed_training_data  transformed_data  user2Idx  y_test  y_train
recommender_system/history/: runs.db
recommender_system/history/runs/: index.db
recommender_system/mlruns/0/: meta.yaml
recommender_system/mlruns/233813874968303419/: meta.yaml
recommender_system/mlruns/233813874968303419/02680b1d47ec419aa25eef9b30030a8b/: meta.yaml
recommender_system/mlruns/233813874968303419/11f51b68c57245b9beaac201cb7f9e53/: meta.yaml
recommender_system/mlruns/233813874968303419/1996b7f528214e22923aa00a0783b2aa/: meta.yaml
recommender_system/recommender_system/: configs.py  definitions.py  project.py
recommender_system/recommender_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recommender_system/recommender_system/assets/: __init__.py
recommender_system/schedules/: schedules.db
(+548 files in other folders)
